--- a/CfxGenerator/CfxGenerator.vbproj
+++ b/CfxGenerator/CfxGenerator.vbproj
@@ -155,7 +155,7 @@
     <EmbeddedResource Include="Config\LicenseStub.txt" />
     <EmbeddedResource Include="Config\AdditionalCallIds.txt" />
     <Content Include="Config\AdditionalFunctions.txt" />
-    <EmbeddedResource Include="Config\CallbackValueStructs.txt" />
+    <EmbeddedResource Include="Config\StructsNeedWrapping.txt" />
     <EmbeddedResource Include="Config\PrivateWrapper.txt" />
     <EmbeddedResource Include="Config\BrowserProcessOnly.txt" />
   </ItemGroup>
