--- a/CfxGenerator/CfxGenerator.vbproj
+++ b/CfxGenerator/CfxGenerator.vbproj
@@ -98,12 +98,12 @@
     <Compile Include="ApiTypes\CefStructRefType.vb" />
     <Compile Include="ApiTypes\CefStringPtrType.vb" />
     <Compile Include="ApiTypes\BlittablePtrType.vb" />
-    <Compile Include="ApiTypes\BlittableOutType.vb" />
     <Compile Include="ApiTypes\NumericOutType.vb" />
     <Compile Include="ApiTypes\NumericType.vb" />
     <Compile Include="ApiTypes\SizeType.vb" />
     <Compile Include="ApiTypes\SpecialType.vb" />
     <Compile Include="ApiTypes\StringCollectionType.vb" />
+    <Compile Include="ApiTypes\VoidPtrPtrType.vb" />
     <Compile Include="ApiTypes\WrapperOnly\CefStructPtrArrayType.vb" />
     <Compile Include="ApiTypes\WrapperOnly\WrapperArrayType.vb" />
     <Compile Include="Builder\CfxClassBuilder.vb" />
