--- a/CfxGenerator/CfxGenerator.vbproj
+++ b/CfxGenerator/CfxGenerator.vbproj
@@ -72,9 +72,6 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Libraries.net\VBClasses\AssemblyResources.vb">
-      <Link>AssemblyResources.vb</Link>
-    </Compile>
     <Compile Include="ApiTypeBuilder.vb" />
     <Compile Include="ApiTypes\ApiType.vb" />
     <Compile Include="ApiTypes\ArrayCountType.vb" />
@@ -107,6 +104,7 @@
     <Compile Include="ApiTypes\WrapperOnly\CefStructArrayType.vb" />
     <Compile Include="ApiTypes\WrapperOnly\CefStructPtrArrayType.vb" />
     <Compile Include="ApiTypes\WrapperOnly\WrapperArrayType.vb" />
+    <Compile Include="AssemblyResources.vb" />
     <Compile Include="Builder\CfxClassBuilder.vb" />
     <Compile Include="CustomSignatures\GetPageRangesSignature.vb" />
     <Compile Include="CustomSignatures\SignatureWithStructArray.vb" />
