--- a/ChromiumFX/ChromiumFX.csproj
+++ b/ChromiumFX/ChromiumFX.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -44,7 +44,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Generated\CfxAllowCertificateErrorCallback.cs" />
     <Compile Include="Generated\CfxApi.cs" />
-    <Compile Include="Generated\CfxApiInit.cs" />
     <Compile Include="Generated\CfxApp.cs" />
     <Compile Include="Generated\CfxAuthCallback.cs" />
     <Compile Include="Generated\CfxBeforeDownloadCallback.cs" />
