--- a/ChromiumFX/ChromiumFX.csproj
+++ b/ChromiumFX/ChromiumFX.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -217,7 +217,7 @@
     <Compile Include="Source\CfxDebug.cs" />
     <Compile Include="Source\CfxResponse.cs" />
     <Compile Include="Source\CfxTime.cs" />
-    <Compile Include="Source\CfxStringCollections.cs" />
+    <Compile Include="Source\StringCollections.cs" />
     <Compile Include="Source\CfxZipReader.cs" />
     <Compile Include="Source\Remote\CfrTime.cs" />
     <Compile Include="Source\Remote\CfrV8HandlerExecuteEventArgs.cs" />
