--- a/ChromiumFX/ChromiumFX.csproj
+++ b/ChromiumFX/ChromiumFX.csproj
@@ -217,7 +217,7 @@
     <Compile Include="Source\CfxDebug.cs" />
     <Compile Include="Source\CfxResponse.cs" />
     <Compile Include="Source\CfxTime.cs" />
-    <Compile Include="Source\StringCollections.cs" />
+    <Compile Include="Source\StringFunctions.cs" />
     <Compile Include="Source\CfxZipReader.cs" />
     <Compile Include="Source\Remote\CfrTime.cs" />
     <Compile Include="Source\Remote\CfrV8HandlerExecuteEventArgs.cs" />
