--- a/CfxGenerator/CfxGenerator.vbproj
+++ b/CfxGenerator/CfxGenerator.vbproj
@@ -105,9 +105,10 @@
     <Compile Include="ApiTypes\WrapperOnly\CefStructPtrArrayType.vb" />
     <Compile Include="ApiTypes\WrapperOnly\WrapperArrayType.vb" />
     <Compile Include="AssemblyResources.vb" />
-    <Compile Include="Builder\CfxClassBuilder.vb" />
+    <Compile Include="CfxClassBuilder.vb" />
     <Compile Include="CustomSignatures\GetPageRangesSignature.vb" />
     <Compile Include="CustomSignatures\SignatureWithStructArray.vb" />
+    <Compile Include="CustomSignatures\StringCollectionAsRetvalSignature.vb" />
     <Compile Include="Parser\CommentData.vb" />
     <Compile Include="Signature\Argument.vb" />
     <EmbeddedResource Include="Config\VolatileEventArgs.txt" />
