--- a/Tests/Windowless/Windowless.csproj
+++ b/Tests/Windowless/Windowless.csproj
@@ -63,12 +63,16 @@
       <Link>cef\d3dcompiler_43.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\cef\Release64\d3dcompiler_47.dll">
-      <Link>cef\d3dcompiler_47.dll</Link>
+    <Content Include="..\..\cef\Release64\d3dcompiler_46.dll">
+      <Link>cef\d3dcompiler_46.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\cef\Release64\ffmpegsumo.dll">
       <Link>cef\ffmpegsumo.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\cef\Release64\icudt.dll">
+      <Link>cef\icudt.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\cef\Release64\libcef.dll">
@@ -83,26 +87,10 @@
       <Link>cef\libGLESv2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\cef\Release64\pdf.dll">
-      <Link>cef\pdf.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\cef\Release64\icudtl.dat">
-      <Link>cef\icudtl.dat</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="..\..\cef\Resources\cef.pak">
       <Link>cef\cef.pak</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\..\cef\Resources\cef_100_percent.pak">
-      <Link>cef\cef_100_percent.pak</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="..\..\cef\Resources\cef_200_percent.pak">
-      <Link>cef\cef_200_percent.pak</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="..\..\cef\Resources\devtools_resources.pak">
