Renamed windowless application.

--- a/linux/Windowless.csproj
+++ b/linux/Windowless.csproj
@@ -8,13 +8,13 @@
     <ProjectGuid>{48D83F36-CEDD-401F-9E31-295794956424}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>LinuxTestApp</RootNamespace>
-    <AssemblyName>LinuxTestApp</AssemblyName>
+    <AssemblyName>Windowless</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Build\Debug\</OutputPath>
+    <OutputPath>..\Build\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -23,7 +23,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Build\Release\</OutputPath>
+    <OutputPath>..\Build\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
