--- a/CfxGenerator/CfxGenerator.csproj
+++ b/CfxGenerator/CfxGenerator.csproj
@@ -85,6 +85,8 @@
     <Compile Include="CfxClass\CfxValueClass.cs" />
     <Compile Include="CfxClass\CfxLibraryClass.cs" />
     <Compile Include="CfxClass\CfxClientClass.cs" />
+    <Compile Include="Parser2\Parser.cs" />
+    <Compile Include="Parser2\Scanner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyResources.cs" />
     <Compile Include="CefApiDeclarations.cs" />
